nesc-frontend/src/test/resources/integration/programs/good/good03/C.nc
/* Flexible member as the last field of a structure. */

struct s
{
   int i;
   char c;
   int tab[];
};

configuration C
{
}
implementation
{
}
