nesc-frontend/src/test/resources/integration/programs/bad/bad08/C.nc
/* Redefinition of a tag. */

configuration C
{
   struct s
   {
      int i;
      char* buffer;
   };

   struct s
   {
      const char* name;
      float result;
   };
}
implementation
{
}
